syntax = "proto3";

package log.v1;

option go_package = "github.com/Devin-Yeung/proglog/api/log_v1";

message Record {
  bytes value = 1;
  uint64 offset = 2;
}

message ProduceRequest {
  Record record = 1;
}

message ProduceResponse {
  uint64 offset = 1;
}

message ConsumeRequest {
  uint64 offset = 1;
}

message ConsumeResponse {
  Record record = 1;
}

service Log {
  rpc Produce(ProduceRequest) returns (ProduceResponse) {}
  rpc Consume(ConsumeRequest) returns (ConsumeResponse) {}
  // Server streaming RPC: client sends a single request, server responds with a stream of messages
  rpc ConsumeStream(ConsumeRequest) returns (stream ConsumeResponse) {}
  // Bi-directional streaming RPC: client and server send a stream of messages to each other
  rpc ProduceStream(stream ProduceRequest) returns (stream ProduceResponse) {}
}